--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Sidebar Menu</title>
 
     <link rel="stylesheet" href="./style.css">
+
+    <!-- Fontawesome Css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 </head>
 <body>
